# ethercat-lib

./: .gitignore  CMakeLists.txt  conanfile.py  package.xml  readme.md
cmake/: FindSphinx.cmake  config.cmake.in
cmake/common/: add_library_target.cmake  add_test_target.cmake  arguments.cmake
cmake/doc/: add_doxygen_doc.cmake  add_sphinx_doc.cmake
cmake/ros/: add_ament_library.cmake  add_ament_test.cmake
cmake/ros/tests/: ament_add_gtest.cmake  ament_add_gtest_executable.cmake  ament_add_gtest_test.cmake  ament_find_gtest.cmake
cmake/standard/: add_standard_library.cmake  add_standard_test.cmake
doc/: CMakeLists.txt  Doxyfile  conf.py  index.rst
doc/plantuml/: common.plantuml  descriptors.plantuml  diagram.plantuml  master.plantuml  slave.plantuml  types.plantuml
doc/plantuml/utilities/: classes.plantuml
doc/src/: abstraction.rst  drivers.rst  eni.rst
doc/src/abstraction/: objects.rst  translation.rst  types.rst
doc/src/drivers/: master.rst  slave.rst
doc/src/eni/: common.rst  entities.rst
include/: ethercat.hpp
include/ethercat/: common.hpp  config.hpp  descriptors.hpp  eni.hpp  master.hpp  slave.hpp  types.hpp  utilities.hpp
include/ethercat/common/: handlers.hpp  synchronisation.hpp  translation.hpp  types.hpp  utilities.hpp
include/ethercat/common/handlers/: event_handler.hpp
include/ethercat/common/handlers/event_handler/: event_handler.hpp
include/ethercat/common/synchronisation/: locks.hpp  synchronised_reference.hpp
include/ethercat/common/synchronisation/locks/: locks.hpp
include/ethercat/common/synchronisation/synchronised_reference/: synchronised_reference.hpp
include/ethercat/common/translation/: default_translator.hpp  sizing_translator_traits.hpp  sizing_translator_wrapper.hpp  translation_error.hpp  translator_traits.hpp  translator_wrapper.hpp
include/ethercat/common/translation/default_translator/: common.hpp  specializations.hpp  supported_types.hpp  types.hpp
include/ethercat/common/translation/default_translator/specializations/: bit.hpp  builtin.hpp  static_string.hpp  string.hpp
include/ethercat/common/translation/default_translator/types/: bit.hpp  static_string.hpp
include/ethercat/common/translation/sizing_translator_traits/: base.hpp  dynamic.hpp  sizing_traits.hpp  static.hpp
include/ethercat/common/translation/sizing_translator_traits/sizing_method_traits/: dynamic.hpp  dynamic_template.hpp  static.hpp  static_template.hpp
include/ethercat/common/translation/sizing_translator_wrapper/: sizing_translator_wrapper.hpp
include/ethercat/common/translation/translation_error/: translation_error.hpp
include/ethercat/common/translation/translator_traits/: base.hpp  explicit.hpp  implicit.hpp  translation_method_traits.hpp  translator_traits.hpp
include/ethercat/common/translation/translator_traits/translation_method_traits/: input.hpp  input_template.hpp  output.hpp  output_template.hpp
include/ethercat/common/translation/translator_wrapper/: translator_wrapper.hpp
include/ethercat/common/types/: builtin.hpp  common.hpp  structural.hpp  traits.hpp  type.hpp
include/ethercat/common/types/builtin/: builtin.hpp
include/ethercat/common/types/structural/: structural.hpp
include/ethercat/common/types/traits/: type_traits.hpp  type_traits_functions.hpp
include/ethercat/common/types/type/: type.hpp
include/ethercat/common/utilities/: bit.hpp  crtp.hpp  enum.hpp  string.hpp  traits.hpp  type_name.hpp  variant.hpp
include/ethercat/common/utilities/bit/: bit.hpp
include/ethercat/common/utilities/crtp/: crtp.hpp
include/ethercat/common/utilities/enum/: enum.hpp
include/ethercat/common/utilities/string/: string.hpp
include/ethercat/common/utilities/traits/: arrays.hpp  function_traits.hpp  general_traits.hpp  templates_traits.hpp  type_traits.hpp
include/ethercat/common/utilities/variant/: variant.hpp
include/ethercat/descriptors/: object.hpp  types.hpp
include/ethercat/descriptors/types/: builtin.hpp  structural.hpp  type.hpp
include/ethercat/descriptors/types/builtin/: builtin.hpp
include/ethercat/descriptors/types/type/: type.hpp
include/ethercat/eni/: configuration.hpp  process_image.hpp  slave.hpp
include/ethercat/eni/common/: error.hpp
include/ethercat/eni/common/element/: access.hpp  element.hpp  iterators.hpp  iterators_base.hpp  loaders.hpp  searching.hpp  stl.hpp
include/ethercat/eni/common/error/: error.hpp
include/ethercat/eni/common/helpers/: helpers.hpp
include/ethercat/eni/configuration/: configuration.hpp
include/ethercat/eni/cyclic/: cyclic.hpp
include/ethercat/eni/master/: master.hpp
include/ethercat/eni/process_image/: process_image.hpp  variable.hpp
include/ethercat/eni/slave/: entry.hpp  pdo.hpp  slave.hpp
include/ethercat/master/: master_priv.hpp  master_prot.hpp  master_pub.hpp
include/ethercat/master/doc/: master_impl.hpp
include/ethercat/slave/: pdo.hpp  sdo.hpp  slave_priv.hpp  slave_prot.hpp  slave_pub.hpp  translators_traits.hpp
include/ethercat/slave/doc/: slave_impl.hpp
include/ethercat/slave/pdo/: entry.hpp  pdo.hpp
include/ethercat/slave/pdo/entry/: buffer.hpp  entry.hpp  reference.hpp
include/ethercat/slave/pdo/entry/buffer/: buffer.hpp
include/ethercat/slave/pdo/entry/reference/: reference.hpp
include/ethercat/slave/sdo/: sdo.hpp
include/ethercat/types/: builtin.hpp  structural.hpp  type.hpp  type_error.hpp
include/ethercat/types/type/: type.hpp
include/ethercat/types/type_error/: type_error.hpp
include/ethercat/utilities/: named_bitset.hpp
spike/: api_design_v3.cpp  ethercat_translators.cpp  ethercat_type_hierarchy.cpp  translator_wrapper_test.cpp
spike/legacy/v1/include/: ethercat.hpp
spike/legacy/v1/include/ethercat/: abstract.hpp  common.hpp  drivers.hpp
src/ethercat/eni/configuration/: configuration.cpp
src/ethercat/eni/process_image/: process_image.cpp
src/ethercat/eni/slave/: pdo.cpp  slave.cpp
src/ethercat/types/: builtin.cpp  type.cpp
tests/: CMakeLists.txt
tests/data/: test_eni.xml
tests/src/: default_parser_test.cpp  eni_parsing_test.cpp
(+64 files in other folders)
