<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>ethercat-lib</name>
    <!-- Package's version -->
    <version>1.1.0</version>
    <!-- Package's description -->
    <description>

    C++ library providing implementation of the subset of abstraction defined by the EDP (EtherCAT Device Protocol)

    </description>
    <!-- Package's author -->
    <author email="krzysztof.pierczyk@gmail.com">Krzysiek Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysiek Pierczyk</maintainer>
    <!-- Package's license -->
    <license>MIT</license>

    <!-- Build tool dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <!-- Package's build export dependencies (external libraries) -->
    <build_export_depend>libboost-dev</build_export_depend>
    <build_export_depend>librange-v3-dev</build_export_depend>
    <!-- Package's build dependencies (external libraries) -->
    <build_depend>libboost-dev</build_depend>
    <build_depend>librange-v3-dev</build_depend>
    <!-- Package's runtime dependencies (external libraries) -->
    <exec_depend>libboost-dev</exec_depend>
    <exec_depend>librange-v3-dev</exec_depend>
    <!-- Test dependencies -->
    <test_depend>ament_cmake_test</test_depend>
    <test_depend>gtest</test_depend>
    <test_depend>gtest_vendor</test_depend>

    <!-- ================================================================================================= -->
    <!-- @note 'librange-v3-dev' rosdep System Dependency not yet supported in ROS2 Galaxy (Ubuntu Focal); -->
    <!--       requires manual downloading                                                                 -->
    <!-- ================================================================================================= -->

    <!-- Package's exports -->
    <export>
      <build_type>ament_cmake</build_type>
    </export>

</package>
